@@ -145,6 +145,9 @@ for i in $(pacman -Ql "${_ALL_PACKAGES[@]}" | rg -o '/usr/share/licenses/.*'); d
 done
 _result license-error.log
 _run_test "filesystems"
+# disable kernel messages
+# bcachefs prints kernel messages
+echo 0 > /proc/sys/kernel/printk
 for i in bcachefs btrfs ext4 swap vfat xfs; do
     _losetup
     if [[ "${i}" == "swap" ]]; then
@@ -163,6 +166,8 @@ for i in bcachefs btrfs ext4 swap vfat xfs; do
     fi
     _losetup_stop
 done
+# enable kernel messages
+echo 4 > /proc/sys/kernel/printk
 _result filesystems-error.log
 _run_test "blockdevices"
 echo -n "mdadm "
